# sdlc-harness

./: .gitignore  AGENTS.md  README.md  SDLC.md  features.md  pyproject.toml
.agent-harness/: config.yaml
.agent-harness/policies/: default.yaml  privileged-change.yaml
.agent-harness/prompts/: demo.md  implement.md  plan.md  replan.md  review.md
.agent-harness/schemas/: config.schema.json  feature.schema.json  plan.schema.json  review.schema.json  run-request.schema.json  run-result.schema.json
.github/workflows/: test.yaml
src/agent_harness/: __init__.py  cli.py
src/agent_harness/catalog/: __init__.py  models.py  parser.py  updater.py
src/agent_harness/config/: __init__.py  loader.py  models.py
src/agent_harness/provider/: __init__.py  contract.py  fake.py  router.py
src/agent_harness/state/: __init__.py  commands.py  idempotency.py  machine.py  models.py  transitions.py
tests/: test_phase0.py
