[project]
name = "agent-harness"
version = "0.1.0"
description = "Agentic SDLC Harness — GitHub-centered orchestration for human-governed agent loops"
readme = "README.md"
authors = [
    { name = "Cursor Agent", email = "cursoragent@cursor.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "jsonschema>=4.26.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["agent_harness"]
